--- a/css/simulacao.css
+++ b/css/simulacao.css
@@ -268,6 +268,7 @@ tr:nth-child(even) {
 }
 
 .msgErro {
+    text-align: center;
     font-size: 20px;
     color: white;
     background-color: rgb(129, 0, 0);
@@ -283,6 +284,17 @@ tr:nth-child(even) {
 
 .hithere {
     animation: hithere 1.5s ease infinite;
+}
+
+.refazerSimulacao {
+    margin-top: 10px;
+}
+
+.input_main {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0px 200px;
 }
 
 @keyframes hithere {
@@ -310,6 +322,13 @@ tr:nth-child(even) {
     }
 }
 
+@media screen and (max-width: 991px) {
+    .input_main {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
 @media screen and (max-width: 900px) {
     .duvidas {
         flex-wrap: wrap;
@@ -329,6 +348,11 @@ tr:nth-child(even) {
 @media screen and (max-width: 800px) {
     .financeiro {
         width: 720px;
+    }
+
+    .input_main {
+        flex-direction: column;
+        align-items: center;
     }
 }
 
