--- a/css/simulacao.css
+++ b/css/simulacao.css
@@ -286,8 +286,23 @@ tr:nth-child(even) {
     animation: hithere 1.5s ease infinite;
 }
 
-.refazerSimulacao {
-    margin-top: 10px;
+.btnRefazer {
+    text-align: center;
+    margin-top: 30px;
+}
+
+.refazerSimulacao, .btnSimular {
+    border: 1px solid #c2c2c2;
+    text-align: center;
+    background-color: #197ace;
+    padding: 5px 20px;
+    border-radius: 10px;
+    color: #fff;
+    transition: 0.5s transform ease-in-out;
+}
+
+.refazerSimulacao:hover, .btnSimular:hover {
+    transform: scale(1.05);
 }
 
 .input_main {
@@ -295,7 +310,7 @@ tr:nth-child(even) {
     justify-content: space-between;
     width: 100%;
     padding: 0px 200px;
-}
+} 
 
 @keyframes hithere {
     30% {
@@ -326,6 +341,7 @@ tr:nth-child(even) {
     .input_main {
         flex-direction: column;
         align-items: center;
+        padding: 0px 150PX;
     }
 }
 
@@ -353,6 +369,7 @@ tr:nth-child(even) {
     .input_main {
         flex-direction: column;
         align-items: center;
+        padding: 0px 100PX;
     }
 }
 
